[package]
name = "nm"
description = "libnm (Network Manager) bindings"
version = "0.1.0"
authors = ["Lance Hart <me@lancehart.ca>"]
edition = "2024"
repository = "https://github.com/shipsimfan/lib-nm"
license = "GPL-3.0-or-later"
publish = false

[dependencies]
glib-2.git = "https://github.com/shipsimfan/glib-2"
linux.git = "https://github.com/shipsimfan/lib-linux"
